# tix-cli

./: .gitignore  Cargo.toml  README.md  build.rs
src/: editor.rs  main.rs
src/ffi/: add.rs  amend.rs  clone.rs  config.rs  error.rs  init.rs  list.rs  log.rs  mod.rs  mv.rs  priority.rs  project.rs  projects.rs  pull.rs  push.rs  redo.rs  remote.rs  show.rs  status.rs  ticket.rs  undo.rs
templates/: ticket.txt
